--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,7 +1,32 @@
+body {
+    background-image: url(/assets/background.jpg);
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-position:center;
+}
+
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
-  max-width: 700px; }
+  max-width: 700px;
+}
+
+.content {
+    padding: 20px;
+    background-color: #fff;
+    border-color: #fff;
+    border-radius: 10px;
+}
+
+footer {
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: #fff;
+    border-color: #fff;
+    border-radius: 10px;
+}
 
 .container-narrow > hr {
   margin: 30px 0; }
