--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,4 +1,6 @@
 body {
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 900;
 }
 
 /* Custom container */
@@ -84,3 +86,14 @@ footer {
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+
+.post_block {
+  border: 1px dashed;
+  width: 100%;
+  padding: 10px;
+  margin: 10px;
+}
+
+.row-fluid [class*="span"] {
+    margin-left: 0;
+}
