remove .idea, changed background color

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Advent Pro', sans-serif;
     font-weight: 900;
+    background-color: #99e2cb;
 }
 
 /* Custom container */
