--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -33,6 +33,12 @@ footer {
 .navbar .nav {
   float: right; }
 
+.navbar-inner {
+	background-image: none;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+}
+
 /* posts index */
 .post > h3.title {
   position: relative;
