--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -22,9 +22,6 @@ footer {
     padding-bottom: 10px;
     padding-left: 5px;
     padding-right: 5px;
-    background-color: #fff;
-    border-color: #fff;
-    border-radius: 10px;
 }
 
 .container-narrow > hr {
@@ -34,6 +31,7 @@ footer {
   float: right; }
 
 .navbar-inner {
+	background-color: #5dd0ab;
 	background-image: none;
 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
