modified:   assets/themes/twitter/css/style.css

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Advent Pro', sans-serif;
     font-weight: 900;
     background-color: #99e2cb;
+    color: #0f3327;
 }
 
 /* Custom container */
