--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -18,6 +18,11 @@ body {
     border-radius: 10px;
 }
 
+a {
+   color: #3ec79c;
+   border-bottom: 1px dotted #3ec79c;
+}
+
 footer {
     padding-top: 5px;
     padding-bottom: 10px;
@@ -35,6 +40,10 @@ footer {
 	background-image: none;
 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+}
+
+.navbar a {
+	text-decoration: none;
 }
 
 /* posts index */
