--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,8 +1,12 @@
 body {
     font-family: 'Advent Pro', sans-serif;
-    font-weight: 900;
+    font-weight: lighter;
     background-color: #99e2cb;
     color: #0f3327;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: lighter;
 }
 
 /* Custom container */
